u200/hw_emu/_x/block_mm/top/top/solution/.autopilot/db/clang.err.log
/data/matthew/matmult_u200/src/block_mm.cpp:52:6: error: type 'blockmat' does not provide a subscript operator
    C[n*SIZE+m] = Arows[n*SIZE+k] * Bcols[k*SIZE+m];
    ~^~~~~~~~~
/data/matthew/matmult_u200/src/block_mm.cpp:52:24: error: type 'hls::stream<blockvec>' does not provide a subscript operator
    C[n*SIZE+m] = Arows[n*SIZE+k] * Bcols[k*SIZE+m];
                  ~~~~~^~~~~~~~~
/data/matthew/matmult_u200/src/block_mm.cpp:52:42: error: type 'hls::stream<blockvec>' does not provide a subscript operator
    C[n*SIZE+m] = Arows[n*SIZE+k] * Bcols[k*SIZE+m];
                                    ~~~~~^~~~~~~~~
3 errors generated.
